@@ -201,6 +201,9 @@ namespace Castle.MicroKernel.Releasers
 		/// </summary>
 		/// <param name = "perfMetricsFactory"></param>
 		/// <returns></returns>
+#if !(SILVERLIGHT || DOTNET35)
+		[System.Security.SecuritySafeCritical]
+#endif
 		public static ITrackedComponentsPerformanceCounter GetTrackedComponentsPerformanceCounter(
 			IPerformanceMetricsFactory perfMetricsFactory)
 		{
